# klipper

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig.defaults  sdkconfig.esp32c2  sdkconfig.esp32c3  sdkconfig.esp32c6  sdkconfig.esp32s2  sdkconfig.esp32s3
config/: README-PRODUCTION-CONFIGS.md  generic-esp32-production.cfg  generic-esp32.cfg  generic-esp32c2-production.cfg  generic-esp32c3-production.cfg  generic-esp32c3.cfg  generic-esp32c6-production.cfg  generic-esp32s2-production.cfg  generic-esp32s3-production.cfg  generic-esp32s3.cfg
docs/: ESP32_CHIP_SELECTION_GUIDE.md
esp32_component/: CMakeLists.txt
scripts/: build-esp32.sh  extract_compile_time_requests.py
src/: Kconfig  i2ccmds.c  spicmds.c
src/esp32/: Kconfig  Kconfig.old  Makefile  README.md  adc.c  adc.h  autoconf.h  chipid.c  console.c  ctr_stubs.c  esp32.ld  esp32.lds.S  gpio.c  gpio.h  hard_pwm.c  i2c.c  i2c.h  internal.h  io.h  irq.c  irq.h  main.c  misc.h  pgm.h  pwm.h  serial.c  serial.h  spi.c  spi.h  timer.c  timer.h  timer_irq.h  watchdog.c
test/configs/: esp32.config  esp32.config.old
